@@ -1,6 +1,14 @@
 2003-07-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>
 
 	* mod_vlad.c :
+	* proc.c :
+	* proc.h :
+
+	  - Added protection from misconfiguration: Requests are preceded by
+	    a call to modvlad_check which checks whether the server process
+	    is alive and the kb within is non-null.
+
+	* mod_vlad.c :
 
 	  - Added child_init hook to initialize child mutex and random seed.
 
